--- a/css/loving_meditations_style.css
+++ b/css/loving_meditations_style.css
@@ -10,15 +10,11 @@ body, html, h1, h2, h3, h4, h5, h6, p, a, button {
 }
 
 body {
-    background: url('../images/cloud_background.png');
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: azure;
+    
 }
 
 #lm-main {
+    
 }
 
 .navbar-brand {
@@ -28,7 +24,7 @@ body {
 #lm-menu {
     position: fixed;
     top: 0;
-    z-index: 5;
+    z-index: 50;
     width:100%;
 }
 
@@ -42,16 +38,65 @@ body {
     padding: 10px 20px;
 }
 
+#background {
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    position: fixed;
+    background: url('../images/cloud_background.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    background-color: azure;
+    -webkit-filter: blur(10px);
+  -moz-filter: blur(10px);
+  -o-filter: blur(10px);
+  -ms-filter: blur(10px);
+  filter: blur(10px);
+}
+
+#blur-mask {
+    z-index: 10;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+}
+
+#blur-column {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    background: url('../images/cloud_background.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+    background-size: cover;
+    z-index: 1;
+    -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -o-filter: blur(5px);
+  -ms-filter: blur(5px);
+  filter: blur(5px);
+}
+
+#content-column {
+    z-index: 10;
+    color: white;
+}
+
 #lm-inspirations {
     margin: 250px 10px 200px 10px;
 }
 
+.section-img {
+    display: block;
+    margin: 0 auto;
+}
+
 #wrapper-inspirations {
-    background: url('../images/nice_snow.png');
     padding: 20px 40px;
-    opacity: .9;
-    border-radius: 20px;
-    min-height: 160px;
 }
 
 #lm-programs {
@@ -60,14 +105,11 @@ body {
 }
 
 #wrapper-programs {
-    background: url('../images/nice_snow.png');
     padding: 40px 60px;
-    opacity: .9;
-    border-radius: 20px;
 }
 
 #active-program {
-    border: 2px solid gray;
+    border: 2px solid white;
     border-radius: 8px;
 }
 
@@ -77,10 +119,7 @@ body {
 }
 
 #wrapper-meditations {
-    background: url('../images/nice_snow.png');
     padding: 40px 60px;
-    opacity: .9;
-    border-radius: 20px;
 }
 
 .videos-image {
@@ -103,14 +142,11 @@ body {
 }
 
 #wrapper-invites {
-    background: url('../images/nice_snow.png');
     padding: 40px 60px;
-    opacity: .9;
-    border-radius: 20px;
 }
 
 input {
-    border: 1px solid gray;
+    border: 1px solid white;
     margin-bottom: 5px;
 }
 
@@ -120,17 +156,17 @@ ul {
 }
 
 p {
-    border: 2px solid gray;
+    border: 2px solid white;
     border-radius: 8px;
 }
 
 .btn-default {
-    border: 2px solid gray;
+    border: 2px solid white;
     border-radius: 8px;
 }
 
 footer {
-    background: url('../images/nice_snow.png');
     opacity: .9;
     padding-top: 20px;
+    z-index: 11;
 }
