--- a/styles/loving_meditations_style.css
+++ b/styles/loving_meditations_style.css
@@ -117,6 +117,11 @@ body {
     border-radius: 8px;
 }
 
+.adviser-btn {
+    border: 2px solid white;
+    border-radius: 8px;
+}
+
 #lm-meditations {
     margin: 10px
 }
