--- a/styles/loving_meditations_style.css
+++ b/styles/loving_meditations_style.css
@@ -123,6 +123,10 @@ body {
     margin: 10px
 }
 
+.adviser-question {
+    font-size: 30px;
+}
+
 #wrapper-meditations {
     padding: 40px 60px;
 }
