--- a/styles/loving_meditations_style.css
+++ b/styles/loving_meditations_style.css
@@ -24,51 +24,6 @@ body {
     
 }
 
-#lm-main {
-    
-}
-
-@media (max-width: 1070px) {
-    .navbar-header {
-        float: none;
-    }
-    .navbar-left,.navbar-right {
-        float: none !important;
-    }
-    .navbar-toggle {
-        display: block;
-    }
-    .navbar-collapse {
-        border-top: 1px solid transparent;
-        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-    }
-    .navbar-fixed-top {
-		top: 0;
-		border-width: 0 0 1px;
-	}
-    .navbar-collapse.collapse {
-        display: none!important;
-    }
-    .navbar-nav {
-        float: none!important;
-		margin-top: 7.5px;
-	}
-	.navbar-nav>li {
-        float: none;
-    }
-    .navbar-nav>li>a {
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    .collapse.in{
-  		display:block !important;
-	}
-}
-
-.navbar-brand {
-    font-size: 120%;
-}
-
 #lm-menu {
     position: fixed;
     top: 0;
@@ -76,18 +31,19 @@ body {
     width:100%;
 }
 
-#lm-nav-bar {
-}
-
-.navbar-header {
+.navbar-brand {
+        max-width: 320px;
+        padding: 5px;
 }
 
 #loving-meditations-logo {
-    height: 75px;
+    max-width:100%;
+    max-height:100%;
 }
 
 .nav >  li {
-    padding: 10px 10px;
+    padding: 15px 10px;
+    font-size: 20px;
 }
 
 .navbar-default .navbar-nav > .active {
@@ -114,14 +70,17 @@ body {
     z-index: 10;
 }
 
-.section-img-top {
+.section-img {
     display: block;
     margin: 150px auto 150px auto;
 }
 
+.section-img-first {
+    margin-top: 250px;
+}
+
 .section-img-bottom {
-    display: block;
-    margin: 150px auto 50px auto;
+    margin-bottom: 50px;
 }
 
 .glyphicon-img {
@@ -131,26 +90,17 @@ body {
 }
 
 #lm-inspirations {
-    margin: 0px 10px 10px 10px;
+    margin: 10px;
     font-size: 30px;
-}
-
-.section-img-first {
-    display: block;
-    margin: 300px auto 150px auto;
 }
 
 #wrapper-inspirations {
     height: 100%;
-    padding: 40px 40px 75px 40px;
+    padding: 40px 20px 40px 20px;
 }
 
 #lm-programs {
     margin: 10px;
-}
-
-#wrapper-programs {
-    padding: 40px 60px;
 }
 
 #programs-row {
@@ -161,17 +111,23 @@ body {
     margin: 10px
 }
 
-.adviser-question {
-    font-size: 30px;
+.adviser-button {
+    margin-bottom: 20px;
 }
 
-#wrapper-meditations {
-    padding: 0px 60px;
+.adviser-question {
+    font-size: 30px;
+    margin: 10px 0px;
+}
+
+.adviser-display-videos {
+    margin: 10px;
+    margin-top: 30px;
 }
 
 .meditations-blurb {
     margin: 10px;
-    min-height: 250px;
+    min-height: 280px;
 }
 
 .meditations-blurb > img {
@@ -182,12 +138,8 @@ body {
     font-size: 30px;
 }
 
-.meditations-blurb-description {
-    overflow : hidden;
-}
-
-.meditations-blurb-duration {
-    
+#meditation-embed {
+    margin: 10px;
 }
 
 .videos-image {
@@ -217,13 +169,6 @@ body {
 
 #lm-contact {
     margin: 10px;
-}
-
-#wrapper-contact {
-    padding 40px 60px;
-}
-
-.contact-btn {
 }
 
 input {
@@ -270,4 +215,29 @@ footer {
 .border-white {
     border: 2px solid white;
     border-radius: 8px;
+}
+
+@media (max-width: 767px) {
+    .navbar-brand {
+        max-width: 250px;
+        padding: 5px;
+    }
+    .nav >  li {
+        padding: 5px 5px;
+        font-size: 20px;
+    }
+    .meditations-blurb-image {
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 1023px) {
+    .navbar-brand {
+        max-width: 250px;
+        padding: 5px;
+    }
+    .nav >  li {
+        padding: 17px 5px;
+        font-size: 15px;
+    }
 }
