--- a/styles/loving_meditations_style.css
+++ b/styles/loving_meditations_style.css
@@ -61,7 +61,7 @@ body {
     background-image: url('../images/cloud_background_large.png');
     background-repeat: no-repeat;
     background-position: center;
-    background-attachment: fixed;
+    background-attachment: scroll;
     background-size: cover;
     background-color: azure;
 }
