--- a/styles/loving_meditations_style.css
+++ b/styles/loving_meditations_style.css
@@ -247,6 +247,12 @@ footer {
         width: 301px;
         height: 180px;
     }
+    
+    select,
+    textarea,
+    input {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 1023px) {
@@ -258,11 +264,23 @@ footer {
         padding: 17px 5px;
         font-size: 15px;
     }
+    
+    select,
+    textarea,
+    input {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 424px) {
     #program-playlist {
         width: 246px;
         height: 150px;
+    }
+    
+    select,
+    textarea,
+    input {
+        font-size: 16px;
     }
 }
