--- a/styles/loving_meditations_style.css
+++ b/styles/loving_meditations_style.css
@@ -253,6 +253,12 @@ footer {
     input {
         font-size: 16px;
     }
+    
+    select:focus,
+    textarea:focus,
+    input:focus {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 1023px) {
@@ -270,6 +276,12 @@ footer {
     input {
         font-size: 16px;
     }
+    
+    select:focus,
+    textarea:focus,
+    input:focus {
+        font-size: 16px;
+    }
 }
 
 @media (max-width: 424px) {
@@ -281,6 +293,12 @@ footer {
     select,
     textarea,
     input {
+        font-size: 16px;
+    }
+    
+    select:focus,
+    textarea:focus,
+    input:focus {
         font-size: 16px;
     }
 }
