--- a/styles/loving_meditations_style.css
+++ b/styles/loving_meditations_style.css
@@ -107,12 +107,20 @@ body {
     margin-bottom: 20px;
 }
 
+.program-header {
+    margin: 5px;
+}
+
 #lm-meditations {
     margin: 10px
 }
 
 .adviser-button {
     margin-bottom: 20px;
+}
+
+.button-highlight {
+    background-color: #f4ba46;
 }
 
 .adviser-question {
@@ -138,6 +146,28 @@ body {
     font-size: 30px;
 }
 
+.meditations-blurb-image-section {
+    position: relative; 
+    left: 0; 
+    top: 0;
+}
+
+.meditations-blurb-image {
+    position: relative; 
+    top: 0; 
+    left: 0;
+}
+
+.meditations-blurb-premium {
+    position: absolute; 
+    top: 5px; 
+    left: 5px;
+}
+
+.meditations-blurb-description {
+    padding: 5px;
+}
+
 #meditation-embed {
     margin: 10px;
 }
@@ -153,6 +183,10 @@ body {
 
 #wrapper-login {
     padding: 40px 20px;
+}
+
+.form-button {
+    background-color: #0072bc;
 }
 
 .btn-group-vertical {
